--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-<style>
     body {display: flex;
     flex-wrap: wrap;
     }
@@ -14,5 +13,5 @@
     }
     #odd {
         background-color: blue;
+        color: red;
     }
-</style>
