--- a/style.css
+++ b/style.css
@@ -1,15 +1,21 @@
     body {display: flex;
     flex-wrap: wrap;
     }
-    #long { width: 100%;
+    header { width: 100%;
             height: 100px;
+            display: flex;
             justify-content: center;
             align-items: center;
-            background-color: gray;
+            background-color: lightcyan;
+            position:fixed;
+            z-index: 999;
     }
     div { background-color: yellow;
           width: 33.33%;
           height: 500px;
+          position: relative;
+          top: 100px;
+          z-index: 1;
     }
     #odd {
         background-color: blue;
