--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
     body {display: flex;
     flex-wrap: wrap;
+    margin: 0;
     }
     header { width: 100%;
             height: 100px;
@@ -10,6 +11,9 @@
             position:fixed;
             z-index: 999;
     }
+
+    h3 { color: blue;}
+
     div { background-color: yellow;
           width: 33.33%;
           height: 500px;
@@ -17,7 +21,7 @@
           top: 100px;
           z-index: 1;
     }
-    #odd {
-        background-color: blue;
-        color: red;
-    }
+    div:nth-child(2n+1) {background-color: rgb(217, 255, 205);}
+
+    .sk_b { color:blue; }
+
