--- a/style.css
+++ b/style.css
@@ -15,13 +15,29 @@
     h3 { color: blue;}
 
     div { background-color: yellow;
-          width: 33.33%;
           height: 500px;
           position: relative;
           top: 100px;
           z-index: 1;
+          overflow: scroll;
+          /* padding: 3px;  이거하면 flex된 div가 다음줄로 넘어감 22.04.14 */
     }
-    div:nth-child(2n+1) {background-color: rgb(217, 255, 205);}
-
+    
     .sk_b { color:blue; }
+    .sk_r { color:red; }
+    
+
+    @media (min-width: 1280px) { 
+        div { width:33.333%; }
+        div:nth-child(2n+1) {background-color: rgb(217, 255, 205);}
+    }
+    @media (max-width: 1280px) { 
+        div { width: 50%; }
+        div:nth-child(4n+1) {background-color: rgb(217, 255, 205);}
+        div:nth-child(4n+2) {background-color: rgb(217, 255, 205);}      
+    }  <!-- 너비가 1280px 이하인 경우 배경색이 핑크 -->
+    @media (max-width: 600px) { 
+        div { width:100%; } 
+        div:nth-child(2n+1) {background-color: rgb(217, 255, 205);}
+    } 
 
