--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
-    body {display: flex;
-    flex-wrap: wrap;
-    margin: 0;
+    body {
+        display: flex;
+        /* justify-content: space-between;  이것으로 100% 안하고 해서 div 사이 여백 만들려고 했으나 의도하지 않은 모양 22.04.14 */
+        flex-wrap: wrap;
+        margin: 0;
     }
     header { width: 100%;
             height: 100px;
@@ -28,7 +30,7 @@
     
 
     @media (min-width: 1280px) { 
-        div { width:33.333%; }
+        div { width:33.3%; }
         div:nth-child(2n+1) {background-color: rgb(217, 255, 205);}
     }
     @media (max-width: 1280px) { 
